# ExpressManager

./: .gitignore  CMakeLists.txt  README.md  main.cpp  测试用数据库.db
controllers/: ExpressCompanyController.cpp  ExpressCompanyController.h  FeedbackController.cpp  FeedbackController.h  PackageController.cpp  PackageController.h  PickupCabinetController.cpp  PickupCabinetController.h  UserController.cpp  UserController.h
db/: DatabaseManager.cpp  DatabaseManager.h
models/: ExpressCompany.cpp  ExpressCompany.h  Feedback.cpp  Feedback.h  Package.cpp  Package.h  PickupCabinet.cpp  PickupCabinet.h  User.cpp  User.h  enums.h
views/: AdminView.cpp  AdminView.h  AdminView.ui  ExpressCompanyView.cpp  ExpressCompanyView.h  ExpressCompanyView.ui  ExpressmanView.cpp  ExpressmanView.h  ExpressmanView.ui  FeedbackView.cpp  FeedbackView.h  FeedbackView.ui  LoginView.cpp  LoginView.h  LoginView.ui  PackageView.cpp  PackageView.h  PackageView.ui  PickupCabinetView.cpp  PickupCabinetView.h  PickupCabinetView.ui  PickupView.cpp  PickupView.h  PickupView.ui  QuickPickupView.cpp  QuickPickupView.h  QuickPickupView.ui  RecipientView.h  StatisticsView.cpp  StatisticsView.h  StatisticsView.ui  UserManageView.cpp  UserManageView.h  UserManageView.ui  UserProfileView.cpp  UserProfileView.h  UserProfileView.ui  UserView.cpp  UserView.h
